--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,10 @@
   --font-family-i: "Inter", serif;
   --font-family-r: "Rufina", serif;
   --font-size-base: 1.38rem; /* Default font size */
-  --font-size-md: 1.76rem;
   --font-size-btn: 1.41rem;
   --font-size-heading: 2.4rem;
   --about-font-size: 2.1rem;
+  --about-font-size-sm: 1.23rem;
 
   /* Breakpoints for responsiveness */
   --breakpoint-x-lg: 1500px;
@@ -137,7 +137,6 @@ img {
   position: relative;
   background: radial-gradient(ellipse at center, #12d5f54d, #12d5f500 80%),
     radial-gradient(ellipse at top left, #11121b, #0f111a);
-
   width: 100%;
   color: white;
   height: 100vh;
@@ -345,7 +344,7 @@ img {
   width: 134.92px;
   height: 43.66px;
 }
-
+/* ABOUT US */
 .about {
   background-color: var(--background-color);
 }
@@ -354,9 +353,9 @@ img {
   font-weight: 700;
   line-height: 51.02px;
   text-align: center;
-  font-size: 42.16px;
+  font-size: 4.2rem;
   color: var(--primary-font-color);
-  margin: 45.02px 0 51.02px 0;
+  margin: 4rem 0 5rem 0;
 }
 
 .custom-heading div {
@@ -372,6 +371,7 @@ img {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
   justify-items: center;
+  padding-bottom: 10.5rem;
   /* justify-content: center; */
   /* gap: 28.11px; */
 }
@@ -421,14 +421,6 @@ img {
   height: 175.66px;
 }
 
-/* .about-card-img img {
-  transition: transform 800ms ease;
-}
-.about-card-img:hover img {
-  transform: scale(1.12);
-} */
-.about-card-img img {
-}
 .about-card-active {
   transform: scale(1.12);
   transition: transform 800ms ease;
@@ -448,13 +440,59 @@ img {
 
 .about-card-texts {
   color: #c7d1ea;
-  font-size: 12.3px;
+  font-size: var(--about-font-size-sm);
   line-height: 18.44px;
   padding: 6.35px;
 }
 
+/* SERVICE */
+.service {
+  background: radial-gradient(ellipse at center, #12d5f54d, #12d5f500 80%),
+    radial-gradient(ellipse at top left, #11121b, #0f111a);
+}
+
+.service-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 2fr);
+  gap: 2.1rem;
+  justify-items: center;
+  padding-bottom: 10.5rem;
+}
+
+.service-card {
+  width: 40.8rem;
+  height: 26.4rem;
+  border-radius: 2.11rem;
+  border: solid 0.88px #242636;
+  padding: 2.89rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: #00000066;
+}
+
+.service-card-title {
+  color: #c7d1ea;
+  font-weight: 500;
+  line-height: 26.35px;
+  font-size: var(--about-font-size);
+  line-height: 23.71px;
+  margin-bottom: 7.03px;
+}
+.service-card-texts {
+  color: #a7a7af;
+  font-size: var(--about-font-size-sm);
+  line-height: 23.71px;
+}
+
 /* ABOUT US PAGE */
 .about-page {
+  height: 100vh;
+  width: 100%;
+}
+/* SERVICE PAGE */
+.service-page {
   height: 100vh;
   width: 100%;
 }
