--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   /* Typography */
   --font-family-i: "Inter", serif;
   --font-family-r: "Rufina", serif;
-  --font-size-base: 1.38rem; /* Default font size */
+  --font-size-base: 1.38rem;
   --font-size-btn: 1.41rem;
   --font-size-heading: 2.4rem;
   --about-font-size: 2.1rem;
@@ -35,8 +35,6 @@
   --space-sm: 2.1rem;
   --space-md: 2.4rem;
   --space-lg: 4.8rem;
-
-  /* Border Radius */
 
   /* Shadows & Transitions */
   --box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -180,10 +178,14 @@ img {
   transition: all var(--transition-speed) ease;
 }
 
+.contact {
+  color: var(--secondary-color);
+}
 .nav-bar-links .active {
   color: var(--secondary-color);
 }
 
+.footer-links-lists li:hover,
 .nav-bar-links-link:hover {
   color: var(--secondary-color);
   text-shadow: var(--glow-text-shadow);
@@ -191,7 +193,6 @@ img {
 
 .nav-bar-logo {
   width: clamp(12rem, 16vw, 16.95rem);
-  /* height: auto; */
   height: 1.76rem;
 }
 
@@ -227,7 +228,7 @@ img {
   position: relative;
   top: 0;
   animation: slide 7s steps(3) infinite;
-  animation-delay: 2s;
+  animation-delay: 1s;
   letter-spacing: 1px;
 }
 
@@ -247,8 +248,6 @@ img {
   background: var(--background-color);
   height: 100vh;
   width: 100%;
-  /* padding-top: 10rem; */
-  /* padding: 15rem; */
 }
 
 .sectionHeading {
@@ -321,12 +320,7 @@ img {
 .brands-container div {
   position: relative;
   padding: 0 3.2rem;
-  /* transition: transform var(--transition-speed) linear; */
 }
-
-/* .brands-container div:hover {
-  transform: scale(1.05);
-} */
 
 .brands-container div:not(:last-child)::after {
   content: "";
@@ -366,6 +360,7 @@ img {
   font-size: 4.2rem;
   color: var(--primary-font-color);
   margin: 4rem 0 5rem 0;
+  text-transform: capitalize;
 }
 
 .custom-heading div {
@@ -382,8 +377,6 @@ img {
   grid-template-rows: 1fr;
   justify-items: center;
   padding-bottom: 10.5rem;
-  /* justify-content: center; */
-  /* gap: 28.11px; */
 }
 
 .about-card {
@@ -402,7 +395,6 @@ img {
   text-align: center;
   border: 0.88px solid #292b3d;
   overflow: hidden;
-  /* padding-top: 0.25px; */
 }
 
 .about-card::before {
@@ -453,10 +445,6 @@ img {
   font-size: var(--about-font-size-sm);
   line-height: 18.44px;
   padding: 6.35px;
-}
-
-.review-card-profile-name-title {
-  /* float: right; */
 }
 
 /* SERVICE */
@@ -621,13 +609,55 @@ img {
 }
 
 /* Footer */
+.footer {
+  background-color: var(--background-color);
+}
+
+.footer-apps {
+  list-style: none;
+  display: flex;
+  gap: 21.08px;
+}
+
 .footer-apps img {
   width: 21.08px;
   height: 21.08px;
 }
 
-.footer {
-  background-color: var(--background-color);
+.footer-list {
+  display: flex;
+  justify-content: space-between;
+  padding: 7rem 2rem;
+}
+
+.footer-list-img {
+  width: 180.85px;
+  height: 18.45px;
+  cursor: pointer;
+}
+
+.footer-img {
+  width: 100%;
+  height: auto;
+}
+
+.footer-links {
+  font-size: 14.05px;
+  color: #a7a7af;
+  line-height: 19.67px;
+}
+
+.footer-links-header {
+  padding-bottom: var(--space-sm);
+}
+
+.footer-links-lists {
+  list-style: none;
+  text-transform: capitalize;
+}
+
+.footer-links-lists li {
+  padding-bottom: var(--space-xs);
 }
 
 /* ABOUT US PAGE */
@@ -640,7 +670,6 @@ img {
   height: 100vh;
   width: 100%;
 }
-/* MEDIA QUERIES */
 
 /* KEYFRAMES */
 @keyframes slide {
@@ -668,3 +697,5 @@ img {
     left: 100%;
   }
 }
+
+/* MEDIA QUERIES */
