Fix about us lauyout

--- a/src/index.css
+++ b/src/index.css
@@ -868,7 +868,7 @@ img {
     display: grid;
     grid-template-columns: repeat(1, 4fr);
     justify-items: center;
-    gap: 2.5rem;
+    gap: 4rem;
     width: 80%;
     margin: auto;
   }
@@ -887,24 +887,9 @@ img {
     height: auto;
   }
 
-  .about-card-active {
-    transform: scale(1.12);
-    transition: transform 800ms ease;
-  }
-
-  .about-card-title {
-    font-size: var(--about-font-size);
-    font-weight: 500;
-    line-height: 26.35px;
-    color: #c7d1ea;
-    padding-bottom: 14.05px;
-  }
-
-  .about-card-mainTexts {
-    padding: 14.05px 28.11px;
-  }
-
   .about-card-texts {
     padding: 0;
   }
+
+  /* SERVICES */
 }
