--- a/src/index.css
+++ b/src/index.css
@@ -928,20 +928,47 @@ img {
     display: none;
   }
 
+  .review-container-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 0 1.75rem;
+  }
+  .review-card {
+    width: 100%;
+    height: 300px;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .review-card-quote {
+    width: 2rem;
+    height: auto;
+    align-self: center;
+    margin-bottom: 1rem;
+  }
+
   .reviews-mobile {
     background: var(--background-color);
     display: block;
+    width: 100%;
   }
 
   .review-btn {
     display: flex;
-    gap: 2rem;
+    gap: 3rem;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding: 1.5rem 0;
   }
 
-  .review-btn button {
+  .review-btn-btn {
     cursor: pointer;
   }
 
-  .review-container-mobile {
+  .review-card-mobile-text {
+    text-align: center;
   }
 }
