--- a/src/index.css
+++ b/src/index.css
@@ -575,22 +575,22 @@ img {
 
 .review-card-profile-title {
   font-weight: 500;
-  font-size: 10.94px;
+  font-size: 11px;
   color: #a7a7af;
-  line-height: 20.52px;
+  line-height: 21px;
 }
 
 .review-card-text {
   font-weight: 500;
-  font-size: 12.31px;
-  line-height: 19.15px;
+  font-size: 12px;
+  line-height: 19px;
   color: #a7a7af;
 }
 
 /* CTA */
 .cta {
   display: grid;
-  padding: 83.44px 0;
+  padding: 83px 0;
   place-items: center;
   background: var(--other-background-gradient);
 }
@@ -756,7 +756,7 @@ img {
     z-index: 1000;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
       rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 
   .nav-card {
@@ -818,6 +818,24 @@ img {
   }
 
   /* HERO */
+  .action-btn {
+    width: 100%;
+    white-space: nowrap;
+    height: 4.5rem;
+    min-width: 2rem;
+    border-radius: 2.11rem;
+    padding: 1.3rem 2rem;
+    display: grid;
+    place-content: center;
+  }
+
+  .scheduleBtn {
+    width: 100%;
+    min-width: 10rem;
+
+    padding: 0.8rem 2.8rem 1rem 2.8rem;
+  }
+
   .hero {
     gap: 1rem;
   }
@@ -944,7 +962,7 @@ img {
   }
   .review-card {
     width: 100%;
-    height: 300px;
+    height: 350px;
     align-items: center;
     justify-content: space-around;
   }
@@ -985,6 +1003,10 @@ img {
     font-size: 2.5rem;
     line-height: 3rem;
     padding-bottom: 1.3rem;
+  }
+
+  .cta-btn {
+    align-self: center;
   }
 
   .cta-texts {
